attempt to fix form overflow mobile

--- a/src/styles/Form.module.scss
+++ b/src/styles/Form.module.scss
@@ -2,7 +2,6 @@
 
 .form {
 	width: 70%;
-	max-width: 100%;
 	height: fit-content;
 	display: flex;
 	flex-direction: column;
@@ -14,7 +13,6 @@
 		flex-direction: column;
 		justify-content: space-evenly;
 		margin-bottom: 5vh;
-		max-width: 100%;
 
 		.inputContainer {
 			display: flex;
@@ -65,6 +63,7 @@
 
 @media only screen and (max-width: vars.$maxWidth) {
 	.form {
-		width: 100%;
+		min-width: 100%;
+		max-width: 100vw;
 	}
 }
